samples/_failures_safe/1761508044_c0882e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0c154b29.c: In function ‘main’:
./samples/SAFE/__tmp_0c154b29.c:154:17: error: expected expression at end of input
  154 |                 return
      |                 ^~~~~~
./samples/SAFE/__tmp_0c154b29.c:154:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0c154b29.c:154:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0c154b29.c:154:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0c154b29.c:154:17: error: expected declaration or statement at end of input
